# PMI_Course

tasks/admission/: admission.cpp
tasks/chocolate/: chocolate.cpp
tasks/fibonacci/: fibonacci.cpp
tasks/image_processor/: CMakeLists.txt  image_processor.cpp  interpreter.cpp  interpreter.hpp
tasks/image_processor/bitmap/: bitmap_file_header.cpp  bitmap_file_header.hpp  bitmap_info.cpp  bitmap_info.hpp
tasks/image_processor/color/: rgb.cpp  rgb.hpp  rgb24.cpp  rgb24.hpp
tasks/image_processor/filters/: base_filter.cpp  base_filter.hpp  complex_filter.cpp  complex_filter.hpp  edge_detection_filter.cpp  edge_detection_filter.hpp  filters.hpp  gaussian_blur_filter.cpp  gaussian_blur_filter.hpp  gray_scale_filter.cpp  gray_scale_filter.hpp  matrix_filter.cpp  matrix_filter.hpp  my_filter.cpp  my_filter.hpp  negative_filter.cpp  negative_filter.hpp  sharpening_filter.cpp  sharpening_filter.hpp  single_pixel_filter.cpp  single_pixel_filter.hpp  threshold_filter.cpp  threshold_filter.hpp
tasks/image_processor/image/: image.cpp  image.hpp  image_exception.cpp  image_exception.hpp
tasks/is_leap/: is_leap.cpp
tasks/min_divisor/: min_divisor.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/provinces/: provinces.cpp
tasks/queue/: queue.cpp
tasks/rational/: rational.cpp
tasks/reduce_fraction/: reduce_fraction.cpp
tasks/scorer/: scorer.cpp
tasks/search/: search.cpp
tasks/sort_students/: sort_students.cpp
tasks/stack/: stack.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: unixpath.cpp
